# anzar_rust

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  README.org  TODO.md  compose.yml  configuration.yaml  release.toml
app/: anzar.yml
app/configuration/: base.yaml  dev.yaml  prod.yaml
app/configuration/mongodb/: dev.yaml  prod.yaml
app/configuration/sqlite/: dev.yaml  prod.yaml
cert/: cert.pem  key.pem
configuration/: base.yaml  local.yaml  production.yaml
configuration/mongodb/: dev.yaml  prod.yaml
configuration/sqlite/: dev.yaml  prod.yaml
migrations/: 20250904052656_create_user_table.sql  20250904054018_create_refresh_token_table.sql  20250904054025_create_password_reset_token_table.sql  20250923000157_create_session_table.sql
src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/adapters/: adapter_factory.rs  database_adapter.rs  factory.rs  mod.rs  mongodb_adapter.rs  traits.rs
src/adapters/memcache/: adapter.rs  mod.rs  repository.rs
src/adapters/mongo/: db_repo.rs  indexes.rs  mod.rs  mongodb_adapter.rs  objectid_parser.rs
src/adapters/mongodb/: adapter.rs  indexes.rs  mod.rs  repository.rs
src/adapters/sqlite/: adapter.rs  db.rs  mod.rs  repository.rs
src/config/: app_state.rs  configuration.rs  database.rs  environment.rs  mod.rs  runtime.rs  server.rs
src/config/configuration/: base.yaml
src/config/configuration/mongodb/: prod.yaml
src/config/configuration/sqlite/: prod.yaml
src/config/database/: config.rs  driver.rs  mod.rs  support.rs
src/core/: mod.rs  rate_limiter.rs  validators.rs
src/core/extractors/: auth_payload.rs  auth_service.rs  authenticated_user.rs  guard.rs  jwt_claims.rs  mod.rs  service_manager.rs  validated_payload.rs
src/core/middlewares/: account.rs
src/core/repository/: db_repo.rs  mod.rs  repository_manager.rs
src/extractors/: auth_payload.rs  auth_service.rs  claims.rs  configuration.rs  mod.rs  remote_ip.rs  user.rs  validation.rs
src/middlewares/: account.rs  account_validation.rs  auth_middleware.rs  authorization_middleware.rs  content_type_middleware.rs  filters.rs  macros.rs  mod.rs  token_validation.rs
src/middlewares/rate_limiting/: middleware.rs  mod.rs  token_bucket.rs
src/parser/: mod.rs
src/repository/: mongodb_repo.rs
src/scopes/: mod.rs
src/scopes/auth/: error.rs  extenstion.rs  handler.rs  jwt.rs  mod.rs  models.rs  repository.rs  scope.rs  service.rs  support.rs  utils.rs
src/scopes/auth/email/: manager.rs
src/scopes/auth/jwt/: claims.rs  keys.rs  mod.rs  model.rs  repository.rs  service.rs  tokens.rs
src/scopes/auth/reset_password/: mod.rs  model.rs  repository.rs  service.rs
src/scopes/auth/templates/: update_password.html
src/scopes/config/: mod.rs  models.rs  scope.rs
src/scopes/email/: mod.rs  model.rs  repository.rs  scope.rs  service.rs
src/scopes/health/: mod.rs
src/scopes/user/: handler.rs  mod.rs  models.rs  repository.rs  scope.rs  service.rs  tests.rs
src/services/: mod.rs
src/services/account/: mod.rs  model.rs  repository.rs  service.rs
src/services/email/: sender.rs
src/services/email/templates/: password_reset.html
src/services/fake/: service.rs
src/services/jwt/: keys.rs  mod.rs  model.rs  repository.rs  service.rs  support.rs  tokens.rs
src/services/lockout/: service.rs
src/services/session/: mod.rs  model.rs  repository.rs  service.rs
src/services/transaction/: adapter.rs  mod.rs  repository.rs
src/utils/: crypto.rs  mod.rs  mongodb_serde.rs  parser.rs  validation.rs
tests/: common.rs  forgot_password_tests.rs  health_check.rs  jwt_tests.rs  login.rs  login_tests.rs  logout.rs  logout_tests.rs  password.rs  rate_limiting_tests.rs  refresh_token_tests.rs  register.rs  register_tests.rs  security_tests.rs  test_cases.rs
tests/helpers/: mod.rs
tests/shared/: common.rs  helpers.rs  mod.rs  test_cases.rs
tests/test_cases/: mod.rs
