[package]
name = "anzar"
version = "0.3.0"
authors = ["Hakou Guelfen <hakoudev@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "anzar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
mongodb = "3.1.0"
chrono = { version = "0.4.37", features = ["serde"] }
derive_more = { version = "1.0", features = ["display"] }
jsonwebtoken = "9.3.0"
serde = "1.0.197"
serde_json = "1.0.115"

futures = "0.3.30"
uuid = "1.10.0"
dotenvy = "0.15.7"
config = "0.14.0"

secrecy = { version = "0.10.3", features = ["serde"] }

# Tests
mockall = "0.13.0"
async-trait = "0.1.82"

# Cryptography
sha3 = "0.10.8" # To be deleted
sha2 = "0.10.9"
argon2 = "0.5.3"
base64 = "0.22.1"
hex = "0.4.3" # To be deleted

# Tracing
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.14"

rand = "0.9.1"
resend-rs = "0.15.0"

[dev-dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
