[package]
name = "anzar"
version = "0.4.0"
edition = "2024"
authors = ["Hakou Guelfen <hakoudev@gmail.com>"]
homepage = "https://gitlab.com/anzar_software/api"
repository = "https://gitlab.com/anzar_software/api"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "anzar"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.11.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
rustls = "0.23.32"

chrono = { version = "0.4.37", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from"] }

# Json
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = "1.0.197"
serde_json = "1.0.115"

# Database
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls-ring-webpki", "uuid", "chrono", "json"] }
# mongodb = "3.1.0"
mongodb = { version = "3.1.0", features = ["rustls-tls"] }

uuid = "1.18.1"
config = "0.15.18"
# NOTE: it's Deprecated
dotenvy = "0.15.7"

secrecy = { version = "0.10.3", features = ["serde"] }

# Tests
mockall = "0.13.0"
async-trait = "0.1.82"

# Cryptography
sha2 = "0.10.9"
argon2 = "0.5.3"
base64 = "0.22.1"

# Tracing
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.14"

rand = "0.9.1"
resend-rs = { version = "0.18.0", default-features = false, features = ["rustls-tls"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_yaml = "0.9.34"
dashmap = "6.1.0"

[dev-dependencies]
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
# rustls-tls-webpki-roots
