[package]
name = "anzar"
version = "0.6.2"
edition = "2024"
authors = ["Hakou Guelfen <hakoudev@gmail.com>"]
homepage = "https://gitlab.com/anzar_software/api"
repository = "https://gitlab.com/anzar_software/api"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "anzar"

[dependencies]
actix-cors = "0.7.0"
# NOTE maybe use secure_coockie from actiw-web
actix-web = { version = "4.11.0", features = ["rustls-0_23"] } 
actix-session = { version = "0.11.0", features = ["cookie-session"] }
tokio = "1.48.0"

chrono = { version = "0.4.37", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from"] }

# Json
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9.34"

# Database
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "tls-rustls-ring-webpki", "uuid", "chrono", "json"] }
mongodb = { version = "3.1.0", features = ["rustls-tls"] }

# Tests
mockall = "0.13.0"
async-trait = "0.1.82"

# Cryptography
sha2 = "0.10.9"
argon2 = "0.5.3"
base64 = "0.22.1"
hmac = "0.12.1"
rustls = { version = "0.23.32", features = ["ring"] }
rustls-pemfile = "2.2.0"

# Tracing
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.14"

rand = "0.9.1"
validator = { version = "0.20.0", features = ["derive"] }
dashmap = "6.1.0"
uuid = "1.18.1"
config = "0.15.18"
secrecy = { version = "0.10.3", features = ["serde"] }


[dev-dependencies]
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
# rustls-tls-webpki-roots
